@@ -6,10 +6,17 @@ import com.team.final8teamproject.contact.dto.NoticeRequest;
 import com.team.final8teamproject.contact.dto.NoticeResponse;
 import com.team.final8teamproject.contact.dto.UpdateNoticeRequest;
 import com.team.final8teamproject.contact.entity.Notice;
+import com.team.final8teamproject.share.exception.CustomException;
+import com.team.final8teamproject.share.exception.ExceptionStatus;
 import java.util.List;
+import java.util.stream.Collectors;
+import lombok.AccessLevel;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort.Direction;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -30,50 +37,119 @@ public class NoticeServiceImpl implements NoticeService {
     noticeRepository.save(notice);
   }
 
+
+  /**
+   * 프론트 페이징 시도 * int page, int countList, int countPage, int totalCount, T data
+   */
+
   @Transactional(readOnly = true)
   @Override
-  public List<NoticeResponse> getNoticeList(int page, int size, Direction direction,
+  public Result getNoticeList(int page, int size, Direction direction,
       String properties) {
+
     Page<Notice> noticeListPage = noticeRepository.findAll(
-        PageRequest.of(page, size, direction, properties));
-    List<NoticeResponse> noticeResponses = noticeListPage.stream().map(NoticeResponse::new)
-        .toList();
-    return noticeResponses;
+        PageRequest.of(page - 1, size, direction, properties));
+    int totalCount = (int) noticeListPage.getTotalElements();
+    System.out.println("totalCount:"+totalCount);
+
+    if (noticeListPage.isEmpty()) {
+      throw new CustomException(ExceptionStatus.POST_IS_EMPTY);
+    }
+    List<NoticeResponse> noticeResponses = noticeListPage.stream().map(NoticeResponse::new).collect(
+        Collectors.toList());
+    int countList = size;
+    int countPage = 5;//todo 리팩토링때  10으로 변경예정
+    int totalPage = totalCount / countList;
+    if (totalCount % countList > 0) {
+      totalPage++;
+    }
+    if (totalPage < page) {
+      page = totalPage;
+    }
+    return new Result(page, totalCount, countPage, totalPage, noticeResponses);
   }
+
 
   @Transactional(readOnly = true)
   @Override
   public NoticeResponse getSelectedNotice(Long id) {
     Notice notice = noticeRepository.findById(id).orElseThrow(
-        () -> new IllegalArgumentException("해당 공지사항이 존재하지 않습니다.")
+        () -> new CustomException(ExceptionStatus.BOARD_NOT_EXIST)
     );
     return new NoticeResponse(notice);
   }
-
   @Transactional(readOnly = true)
   @Override
-  public List<NoticeResponse> searchByKeyword(String keyword, int page, int size,
+  public Result searchByKeyword(String keyword, int page, int size,
       Direction direction, String properties) {
     String title = keyword;
     String content = keyword;
-    Page<Notice> noticeListPage = noticeRepository.findAllByTitleContainingOrContentContaining(title, content,
+//    List<Notice> noticeList = noticeRepository.findAllByTitleContainingOrContentContaining(title,content);
+//    int totalCount = noticeList.size();
+
+    Page<Notice> noticeListPage = noticeRepository.findAllByTitleContainingOrContentContaining(
+        title, content,
         PageRequest.of(page - 1, size, direction, properties));
-    List<NoticeResponse> noticeResponses = noticeListPage.stream().map(NoticeResponse::new)
-        .toList();
-    return noticeResponses;
+    int totalCount = (int) noticeListPage.getTotalElements();
+    if (noticeListPage.isEmpty()) {
+      throw new CustomException(ExceptionStatus.POST_IS_EMPTY);
+    }
+    List<NoticeResponse> noticeResponses = noticeListPage.stream().map(NoticeResponse::new).collect(
+        Collectors.toList());
+    int countList = size;
+    int countPage = 5;//todo 리팩토링때  10으로 변경예정
+    int totalPage = totalCount / countList;
+    if (totalCount % countList > 0) {
+      totalPage++;
+    }
+    if (totalPage < page) {
+      page = totalPage;
+    }
+    return new Result(page, totalCount, countPage, totalPage, noticeResponses);
   }
+//  @Transactional(readOnly = true)
+//  @Override
+//  public Result searchByKeyword(String keyword, int page, int size,
+//      Direction direction, String properties) {
+//    String title = keyword;
+//    String content = keyword;
+//    List<Notice> noticeList = noticeRepository.findAllByTitleContainingOrContentContaining(title,content);
+//    int totalCount = noticeList.size();
+//
+//    Page<Notice> noticeListPage = noticeRepository.findAllByTitleContainingOrContentContaining(
+//        title, content,
+//        PageRequest.of(page - 1, size, direction, properties));
+//    if (noticeListPage.isEmpty()) {
+//      throw new CustomException(ExceptionStatus.POST_IS_EMPTY);
+//    }
+//    List<NoticeResponse> noticeResponses = noticeListPage.stream().map(NoticeResponse::new).collect(
+//        Collectors.toList());
+//    int countList = size;
+//    int countPage = 5;//todo 리팩토링때  10으로 변경예정
+//    int totalPage = totalCount / countList;
+//    if (totalCount % countList > 0) {
+//      totalPage++;
+//    }
+//    if (totalPage < page) {
+//      page = totalPage;
+//    }
+//    return new Result(page, totalCount, countPage, totalPage, noticeResponses);
+//  }
 
   @Transactional
   @Override
   public void updateNotice(Long id, Long managerId, UpdateNoticeRequest updateNoticeRequest) {
+    String title = updateNoticeRequest.getTitle();
+    String content = updateNoticeRequest.getContent();
+
     Notice notice = noticeRepository.findById(id).orElseThrow(
-        () -> new IllegalArgumentException("해당 공지사항이 존재하지 않습니다.")
+        () -> new CustomException(ExceptionStatus.BOARD_NOT_EXIST)
     );
     if (notice.getManagerId().equals(managerId)) {
-      notice.update(updateNoticeRequest);
+      notice.update(title, content);
       noticeRepository.save(notice);
     } else {
-      throw new IllegalArgumentException("접근 할 수 있는 권한이 없습니다.");
+      throw new CustomException(ExceptionStatus.ACCESS_DENINED);
     }
 
   }
@@ -82,13 +158,42 @@ public class NoticeServiceImpl implements NoticeService {
   @Override
   public void deleteNotice(Long id, Long managerId) {
     Notice notice = noticeRepository.findById(id).orElseThrow(
-        () -> new IllegalArgumentException("해당 공지사항이 존재하지 않습니다.")
+        () -> new CustomException(ExceptionStatus.BOARD_NOT_EXIST)
     );
     if (notice.getManagerId().equals(managerId)) {
       noticeRepository.delete(notice);
     } else {
-      throw new IllegalArgumentException("접근 할 수 있는 권한이 없습니다.");
+      throw new CustomException(ExceptionStatus.ACCESS_DENINED);
     }
+
   }
 
+  /**
+   * page = 현재페이지 countList = 한 페이지에 출력 될 게시물 수 countPage = 한 화면에 출력 될 페이지수 totalCount = 총 게시물 수
+   *
+   * @param <T>
+   */
+  @Getter
+  @NoArgsConstructor(access = AccessLevel.PROTECTED)
+  public static class Result<T> {
+
+    private int page;
+    private int totalCount;
+    private int countPage;
+    private int totalPage;
+    private T data;
+
+    public Result(int totalCount, T data) {
+      this.totalCount = totalCount;
+      this.data = data;
+    }
+
+    public Result(int page, int totalCount, int countPage, int totalPage, T data) {
+      this.page = page;
+      this.totalCount = totalCount;
+      this.countPage = countPage;
+      this.totalPage = totalPage;
+      this.data = data;
+    }
+  }
 }
